# CMake_simplified

hello_cmake2/: CMakeLists.txt  hello.cpp  hello.h  testmain.cpp
hello_cmake3/: CMakeLists.txt  README.md
hello_cmake3/src/: CMakeLists.txt  main.cpp
hello_cmake3/test/: CMakeLists.txt
